src/tests/snapshots/rust_poker__tests__can_have_quads__tests__quads_with_trips_board.snap
---
source: src/tests/can_have_quads.rs
expression: quads_combinations
---
[
    (
        [
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
            Card {
                value: 10,
                suit: D,
            },
        ],
        [
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 1,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 13,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 12,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 11,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 9,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 8,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 7,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 6,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 5,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 4,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 3,
                    suit: A,
                },
            ],
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 2,
                    suit: A,
                },
            ],
        ],
    ),
]
